--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "bower-asset/imagesloaded": "*"
+        "bower-asset/imagesloaded": "~3.1.0"
     },
     "autoload": {
         "psr-4": {
